--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                      </div>
                     <!-- js bar -->
                      <div class="bar">
-                        <h3 class="barHead">JS</h3>
+                        <h3 class="barHead">JAVASCRIPT</h3>
                         <span class="barPercent">84%</span>
                         <div class="baseBar"></div>
                         <div data-aos="zoom-in-right" class="baseBar jsBar"></div>
